fixed trend widget tooltip overflow

--- a/public/less/dashboard.less
+++ b/public/less/dashboard.less
@@ -33,6 +33,7 @@ body{
 .left_column {
 	min-height: 30em;
 	padding-top: 23px !important;
+	overflow: visible !important;
 }
 
 /**** TYPOGRAPHY ****/
@@ -176,6 +177,7 @@ label {
 /**** PAGE STRUCTURE ****/
 #wrap {
 	position: relative;
+	padding-bottom: 30px;
 }
 
 #upper_header {
